src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@tmF-wfsBU-wmBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nwant maximized: BU\nconfig:\nwindow-rule {\n    open-maximized-to-edges false\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Activated]
